# legacylipi

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml
.adr/: 001-structure-preserving-translation.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: PRD.md  UIUpgradePlan.md  cli-reference.md  development.md  improvements.md  translation-backends.md
docs/internal/: PRD.md
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ActionButton.tsx  FileUploader.tsx  Header.tsx  OcrSettings.tsx  OutputFormatSelect.tsx  ScanCopySettings.tsx  StatusPanel.tsx  TranslationSettings.tsx  TranslatorSettings.tsx  WorkflowModeSelector.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useConfig.ts  useDownload.ts  useFileUpload.ts  useProcessing.ts  useProgress.ts
frontend/src/lib/: api.ts  constants.ts  types.ts
scripts/: check.sh  dev.sh
src/legacylipi/: __init__.py  cli.py
src/legacylipi/api/: __init__.py  deps.py  main.py  pipeline.py  schemas.py  session_manager.py
src/legacylipi/api/routes/: config.py  download.py  processing.py  progress.py  sessions.py
src/legacylipi/core/: __init__.py  encoding_detector.py  font_analyzer.py  language_utils.py  models.py  ocr_parser.py  output_generator.py  pdf_parser.py  post_processor.py  translator.py  unicode_converter.py
src/legacylipi/core/utils/: __init__.py  language_codes.py  rate_limiter.py  text_wrapper.py  usage_tracker.py
src/legacylipi/fonts/: LICENSE
src/legacylipi/mappings/: __init__.py  aps_dv.py  chanakya.py  dvb_tt.py  loader.py  shree_dev.py  shusha.py  walkman_chanakya.py
src/legacylipi/ui/: __init__.py  app.py
src/legacylipi/utils/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_encoding_detector.py  test_gcp_translator.py  test_integration.py  test_mapping_validation.py  test_mappings.py  test_models.py  test_ocr_parser.py  test_optional_deps.py  test_output_generator.py  test_pdf_parser.py  test_translator.py  test_unicode_converter.py
